--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,25 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next",
+    "next/core-web-vitals"
+  ],
+  "plugins": [],
+  "rules": {
+    "semi": [
+      "error",
+      "never"
+    ],
+    "no-fallthrough": 2,
+    "quotes": [
+      2,
+      "single"
+    ],
+    "react/self-closing-comp": [
+      "error",
+      {
+        "component": true,
+        "html": true
+      }
+    ]
+  }
 }
