--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "@types/node": "17.0.29",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.0",
+    "autoprefixer": "^10.4.5",
+    "babel-plugin-formatjs": "^10.3.9",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "postcss": "^8.4.12",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
